# pypums

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  SECURITY.md  TIDYCENSUS_EVALUATION.md  cookiecutter-config-file.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.binder/: requirements.txt
.claude/: launch.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  claude-code-review.yml  greetings.yml  main.yml  publish.yml  release-drafter.yml  test.yml
binder/: example.ipynb
docker/: README.md
docs/: Makefile  authors.md  conf.py  contributing.md  history.md  index.md  index.rst  installation.md  installation.rst  readme.md  requirements.txt  usage.md  usage.rst
docs/_templates/: class.md
docs/about/: API.rst  api.md  authors.md  contributing.md  history.md
docs/assets/: alameda-boundary.json  alameda-dots.json
docs/getting-started/: census-101.md  installation.md  quickstart.md
docs/guides/: acs-data.md  caching.md  decennial-data.md  geography.md  margins-of-error.md  migration-flows.md  multi-year.md  population-estimates.md  pums-microdata.md  spatial.md  survey-design.md  variables.md
docs/migration/: from-census-ftp.md  from-old-pypums.md  from-tidycensus.md
docs/plans/: 2026-03-13-001-feat-replace-tiger-downloads-with-pygris-plan.md
docs/reference/: api.md  changelog.md  cli.md  datasets.md  surveys.md
docs/user-guide/: installation.md  usage.md
examples/: nb-example.ipynb
examples/notebooks/: example.ipynb
pypums/: __init__.py  __main__.py  acs.py  cache.py  census_helpers.py  cli.py  constants.py  decennial.py  download.py  estimates.py  flows.py  moe.py  pums.py  pypums.py  spatial.py  survey.py  surveys.py  url_builder.py  utils.py  variables.py
pypums/api/: __init__.py  client.py  geography.py  key.py
pypums/datasets/: __init__.py  acs5_geography.py  fips.py  mig_recodes.py  pums_vars.py
pypums/datasets/data/: fips_codes.csv
tests/: __init__.py  conftest.py  test_api_key.py  test_breakdown_labels.py  test_cache.py  test_census_helpers.py  test_cli.py  test_cli_new.py  test_datasets_new.py  test_fips.py  test_geography.py  test_get_acs.py  test_get_decennial.py  test_get_estimates.py  test_get_flows.py  test_get_pums_api.py  test_hello.py  test_keep_geo_vars.py  test_load_variables.py  test_moe.py  test_pypums.py  test_spatial.py  test_survey_metadata.py  test_time_series.py  test_to_survey.py
