# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pypums"
version = "0.1.0"
description = "Download Public Use Micro Sample (PUMS) data files from the US Census Bureau's FTP server."
readme = "README.md"
authors = [
  "chekos <sergio@cimarron.io>"
]
license = "MIT"
repository = "https://github.com/chekos/pypums"
homepage = "https://github.com/chekos/pypums"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["PUMS", "census", "public-data"]  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"pypums" = "pypums.__main__:app"

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = "^1.6.0", python = "<3.8"}
typer = {extras = ["all"], version = "^0.2.1"}
rich = "^2.2.2"
pre-commit = "^2.5.1"
tqdm = "^4.50.2"
us = "^2.0.2"
requests = "^2.24.0"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
darglint = "^1.4.1"
isort = {extras = ["pyproject"], version = "^4.3.21"}
pyupgrade = "^2.6.1"
black = "^21.4b1"
mypy = "^0.780"
bandit = "^1.6.2"
safety = "^1.9.0"
pytest = "^5.4.3"
pylint = "^2.5.3"
pydocstyle = "^5.0.2"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,STDLIB,TYPING,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
line_length = 80
