[build-system]
requires = ["uv_build>=0.10.5,<0.11"]
build-backend = "uv_build"

[project]
name = "pypums"
version = "0.3"
description = "Python interface to the US Census Bureau API for ACS, Decennial Census, PUMS, population estimates, and migration flows."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Sergio Sanchez" }]
dependencies = [
    "us>=2.0.2",
    "httpx>=0.22.0",
    "pandas>=1.1.0",
    "pyarrow>=10.0.0",
    "rich>=11.0.0",
    "typer>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/chekos/pypums"
Documentation = "https://pypums.readthedocs.io"
Issues = "https://github.com/chekos/pypums/issues"
CI = "https://github.com/chekos/pypums/actions"
Changelog = "https://github.com/chekos/pypums/releases"

[project.scripts]
pypums = "pypums.cli:cli"

[project.optional-dependencies]
spatial = ["geopandas>=0.12", "pygris>=0.1.7"]
test = ["pytest"]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
    "mkdocs-typer",
    "pymdown-extensions",
    "mkdocs-charts-plugin",
    "altair",
]

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
norecursedirs = ["*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
addopts = "--strict-markers --tb=short --doctest-modules --doctest-continue-on-failure"
markers = [
    "phase0: Foundation (API infra, geography, FIPS, cache)",
    "phase1: Core data functions (get_acs, get_decennial, load_variables)",
    "phase2: MOE, spatial, enhanced PUMS",
    "phase3: Estimates, flows, survey",
    "integration: Requires real Census API key and network",
    "spatial: Requires geopandas",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"pypums/cli.py" = ["B008"]  # typer requires function calls in defaults
